# sohpos

./: README.md  pyproject.toml
src/: main.py
src/sohpos/: __init__.py  app.py  preferences.py  sohpos.py  strings.py  topics.py
src/sohpos/control/: __init__.py  about.py  account.py  appbar.py  home.py  material.py  menu.py  theme.py  toggle.py
